compiler/testData/diagnostics/tests/funInterface/basicFunInterfaceDisabled.kt
// !LANGUAGE: -FunctionInterfaceConversion

<!UNSUPPORTED_FEATURE!>fun<!> interface Foo {
    fun invoke()
}
